sidebar mobile overflow fix issue

--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,18 +1,20 @@
 .sidebar-container{
     background: #FFFFFF;
     width: 30vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     position: relative;
 }
 .sidebar-container>h2{
     font-weight: 500;
-    font-size: 1.8rem;
+    font-size: 33px;
     letter-spacing: 2%;
     color:#000000 ;
     text-align: center;
-    margin-top: 6vh;
-    margin-bottom: 4vh;
+    margin-top: 40px;
+    margin-bottom:30px;
+    padding: 0 0;
 }
 .createGroup-button{
     background:#16008B ;
@@ -21,7 +23,7 @@
     height: 3rem;
     color: #FFFFFF;
     font-weight: 500;
-    font-size: 2.5rem;
+    font-size: 40px;
     letter-spacing: 2%;
     font-family:roboto;
     display: flex;
@@ -31,8 +33,8 @@
     position:absolute;
     bottom: 0;
     right: 0;
-    margin-right: 1.2rem;
-    margin-bottom: 1.5rem;
+    margin-right: 25px;
+    margin-bottom:20px;
     cursor: pointer;
 }
 .group-container{
@@ -40,7 +42,7 @@
     width: inherit;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: calc(100vh - 103px);
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -52,7 +54,7 @@
  @media (max-width:500px){
     .sidebar-container{
         width:100vw;
-        height: calc(100vh-60px);
+        height: calc(100vh - 60px);
     }
     .sidebar-container>h2{
         position: static;
